--- a/css/styles.scss
+++ b/css/styles.scss
@@ -164,6 +164,7 @@ section:nth-of-type(odd) {
     width: 100%;
   }
   margin-right: 10px;
+  cursor: pointer;
 }
 
 
@@ -172,6 +173,7 @@ section:nth-of-type(odd) {
     height: 300px;
     width: 100%;
   }
+  cursor: pointer;
 }
 
 .contact {
